# rules_rust

./: .gitignore
examples/crate_universe/: WORKSPACE.bazel
examples/crate_universe/cargo_aliases/: cargo-bazel-lock.json
examples/crate_universe/cargo_workspace/: cargo-bazel-lock.json
examples/crate_universe/cargo_workspace/num_printer/: BUILD.bazel
examples/crate_universe/cargo_workspace/rng/: BUILD.bazel  Cargo.toml
examples/crate_universe/multi_package/: cargo-bazel-lock.json
examples/crate_universe/no_cargo_manifests/: cargo-bazel-lock.json
